# bmi702-project

./: .claudeignore  .gitignore  .pre-commit-config.yaml  KOMAP_util.MD  README.md  RESULTS_MS_pipeline_sample.md  brainstorming.md  komap-example.ipynb  komap-util.md  latte-util.md  pipeline.md  pyproject.toml  task-log.md
ablations/: ablation-analysis.ipynb  ablation-experiments.md  ablation-summary.md
ablations/prompt_sensitivity_LATTE/: PROTOCOL_1.md  PROTOCOL_2.md  PROTOCOL_3.md  prompt_sensitivity_analysis.txt
docs/: ablation-experiments.md  gold_label_generation_gemini.md  komap-util.md  latte-util.md  medgemma-exploration.md  midterm_script.md
example_scripts/: 03_feature_matrix.py  04_map_phenotyping.py  05_gold_labels.py  06_latte_phenotyping.py  07_latte_cv.py  PROTOCOL.md  RESULTS.md
examples/latte/: 01_cohort_definition.py  02_notes_nlp.py  PROTOCOL.md
input/: ONCE_PT_phenotype_heart failure_C0018802_titlecos0.5_titlecut0.3_exactFALSE.csv  ONCE_heart failure_PheCode428.1_cos0.165.csv  README.md
m4-pheno/: komap-r.ipynb  komap.py  komap_gen_cov.R  komap_runner.R  map.py  mapping.py  mimic_map_pipeline.ipynb  nile.py  note_ner.py  once.py  preprocessing.py  rollup.py  vocab.py
mapping_dicts/: README.md  build_ndc_to_rxnorm.py
mapping_dicts/athena_ndc_rxnorm_export/: README.md
notebooks/: ra_cohort_map.ipynb  ra_icd_vs_map_comparison.ipynb
output/hemo_test/: PROTOCOL.md  RESULTS.md
scripts/: fetch_discharge_summaries.py  run_gemini_hf_pilot.py
src/: test_ra_pipeline.ipynb
tests/: conftest.py  test_mapping.py  test_once.py
(+67 files in other folders)
