[project]
name = "bmi702-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "medspacy>=1.3.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "scipy>=1.17.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
